# HighBeam

./: .copilot-instructions.md  .gitignore  .pr-task-list.md  LICENSE  PRODUCTION_ROADMAP.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
client/lua/ge/extensions/: highbeam.lua
client/lua/ge/extensions/highbeam/: browser.lua  chat.lua  config.lua  connection.lua  math.lua  nametags.lua  overlay.lua  protocol.lua  state.lua  vehicles.lua
client/lua/vehicle/controller/highbeam/: highbeamDamageVE.lua  highbeamElectricsVE.lua  highbeamInputsVE.lua  highbeamPositionVE.lua  highbeamPowertrainVE.lua  highbeamVE.lua  highbeamVelocityVE.lua
client/lua/vehicle/extensions/highbeam/: highbeamDamageVE.lua  highbeamElectricsVE.lua  highbeamInputsVE.lua  highbeamPositionVE.lua  highbeamPowertrainVE.lua  highbeamVE.lua  highbeamVelocityVE.lua
client/scripts/: modScript.lua
client/scripts/highbeam/: modScript.lua
client/tests/: highbeam_connection_send_test.lua  highbeam_damage_queue_test.lua  highbeam_inputs_test.lua  highbeam_position_math_test.lua
client/ui/: chat.html
docs/: BUILD_GUIDE.md  EXTENSION_BOOTSTRAP_FIX.md  INDEX.md  SYNC_FIX_PLAN.md  SYNC_OPTIMIZATION_PLAN.md  sync-fix-plan.md
docs/architecture/: CLIENT.md  LAUNCHER.md  OVERVIEW.md  PROTOCOL.md  RELAY.md  SERVER.md
docs/reference/: BEAMMP_RESEARCH.md  BEAMNG_MODDING.md
docs/versioning/: CHANGELOG.md  V0.5.0_RELEASE.md  VERSION_PLAN.md
launcher/: Cargo.toml  LauncherConfig.toml  build.rs
launcher/src/: config.rs  detect.rs  discovery.rs  firewall.rs  game.rs  installer.rs  ipc.rs  main.rs  mod_cache.rs  mod_sync.rs  proxy.rs  transfer.rs  updater.rs
server/: .dockerignore  Cargo.toml  Dockerfile  ServerConfig.default.toml  build.rs  docker-compose.yml  highbeam-server.service
server/src/: cli.rs  community_node.rs  config.rs  control.rs  discovery_relay.rs  firewall.rs  gui.rs  log_rotation.rs  main.rs  metrics.rs  mod_sync_state.rs  mods.rs  persistence.rs  tls.rs  updater.rs  validation.rs
server/src/net/: benchmark.rs  mod.rs  mod_transfer.rs  packet.rs  tcp.rs  udp.rs
server/src/plugin/: api.rs  events.rs  mod.rs  runtime.rs
server/src/session/: manager.rs  mod.rs  player.rs  rate_limiter.rs
server/src/state/: mod.rs  vehicle.rs  world.rs
