[package]
name = "highbeam-launcher"
version = "0.4.0"
edition = "2021"
description = "HighBeam launcher for mod sync and game startup"
license = "MIT"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
