[package]
name = "highbeam-launcher"
version = "0.8.2-dev.23"
edition = "2021"
description = "HighBeam launcher for mod sync and game startup"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }

[build-dependencies]
winresource = "0.1"
