[package]
name = "highbeam-server"
version = "0.4.1"
edition = "2021"
description = "HighBeam multiplayer server for BeamNG.drive"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
bytes = "1"
thiserror = "2"
anyhow = "1"
rand = { version = "0.8", features = ["std"] }
sha2 = "0.10"
dashmap = "6"
socket2 = "0.5"
argon2 = "0.5"
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
