[package]
name = "highbeam-server"
version = "0.6.4"
edition = "2021"
description = "HighBeam multiplayer server for BeamNG.drive"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
bytes = "1"
thiserror = "2"
anyhow = "1"
rand = { version = "0.8", features = ["std"] }
sha2 = "0.10"
dashmap = "6"
socket2 = "0.5"
argon2 = "0.5"
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
reqwest = { version = "0.12", features = ["json"] }
flate2 = "1"
tar = "0.4"
sysinfo = "0.37"
zip = { version = "2", default-features = false, features = ["deflate"] }
rustls = { version = "0.23", features = ["std"] }
tokio-rustls = "0.25"
rustls-pemfile = "2"
chrono = "0.4"
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }

[target.'cfg(target_os = "windows")'.dependencies]
tray-item = "0.10"

# On Linux tray-item 0.10 requires an explicit backend feature — ksni uses D-Bus
[target.'cfg(target_os = "linux")'.dependencies]
tray-item = { version = "0.10", features = ["ksni"] }

[dev-dependencies]
tempfile = "3"
