[package]
name = "highbeam-server"
version = "0.8.2-dev.36"
edition = "2021"
description = "HighBeam multiplayer server for BeamNG.drive"
license = "GPL-3.0-only"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
bytes = "1"
thiserror = "2"
anyhow = "1"
rand = { version = "0.8", features = ["std"] }
sha2 = "0.10"
dashmap = "6"
parking_lot = "0.12"
socket2 = "0.5"
argon2 = "0.5"
constant_time_eq = "0.3"
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
reqwest = { version = "0.12", features = ["json"] }
flate2 = "1"
tar = "0.4"
sysinfo = "0.37"
zip = { version = "2", default-features = false, features = ["deflate"] }
rustls = { version = "0.23", features = ["std"] }
tokio-rustls = "0.25"
rustls-pemfile = "2"
chrono = "0.4"
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
tray-icon = "0.19"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
winresource = "0.1"
